Imports organized by intellij. Other minor cosmetic changes.